@@ -7,17 +7,19 @@ module Huberry
         extend ClassMethods
         include InstanceMethods
         
-        cattr_accessor :hashed_password_field, :login_field, :password_field, :salt_field
-        self.hashed_password_field = options[:hashed_password_field] || :hashed_password
-        self.login_field = options[:login_field] || :email
-        self.password_field = options[:password_field] || :password
-        self.salt_field = options[:salt_field] || :salt
+        cattr_accessor :authentication_options
+        self.authentication_options = {
+          :hashed_password_field => :hashed_password, 
+          :login_field => :email, 
+          :password_field => :password, 
+          :salt_field => :salt 
+        }.merge(options)
         
-        attr_accessor self.password_field, "#{self.password_field}_confirmation".to_sym
+        attr_accessor self.authentication_options[:password_field], "#{self.authentication_options[:password_field]}_confirmation".to_sym
         
-        validates_presence_of self.login_field
-        validates_presence_of self.password_field, :if => :password_required?
-        validates_confirmation_of self.password_field, :if => :password_required?
+        validates_presence_of self.authentication_options[:login_field]
+        validates_presence_of self.authentication_options[:password_field], :if => :password_required?
+        validates_confirmation_of self.authentication_options[:password_field], :if => :password_required?
         
         before_save :hash_password
         
@@ -27,7 +29,7 @@ module Huberry
     
     module ClassMethods
       def authenticate(login, password)
-        user = send("find_by_#{self.login_field}", login)
+        user = send("find_by_#{self.authentication_options[:login_field]}", login)
         user && user.authenticated?(password) ? user : false
       end
       
@@ -38,7 +40,7 @@ module Huberry
     
     module InstanceMethods
       def authenticated?(password)
-        send(self.class.hashed_password_field) == self.class.digest(password.to_s + send(self.class.salt_field).to_s)
+        send(self.class.authentication_options[:hashed_password_field]) == self.class.digest(password.to_s + send(self.class.authentication_options[:salt_field]).to_s)
       end
       
       def password_changed?
@@ -52,9 +54,9 @@ module Huberry
       
       def reset_password(new_password = nil)
         new_password = generate_salt[0..7] if new_password.blank?
-        send("#{self.class.salt_field}=", nil)
-        send("#{self.class.password_field}=", new_password)
-        send("#{self.class.password_field}_confirmation=", new_password)
+        send("#{self.class.authentication_options[:salt_field]}=", nil)
+        send("#{self.class.authentication_options[:password_field]}=", new_password)
+        send("#{self.class.authentication_options[:password_field]}_confirmation=", new_password)
         @password_changed = true
       end
       
@@ -71,13 +73,13 @@ module Huberry
         
         def hash_password
           if password_changed? || password_required?
-            send("#{self.class.salt_field}=", generate_salt) if send("#{self.class.salt_field}").blank?
-            send("#{self.class.hashed_password_field}=", self.class.digest(send(self.class.password_field).to_s + send(self.class.salt_field).to_s))
+            send("#{self.class.authentication_options[:salt_field]}=", generate_salt) if send("#{self.class.authentication_options[:salt_field]}").blank?
+            send("#{self.class.authentication_options[:hashed_password_field]}=", self.class.digest(send(self.class.authentication_options[:password_field]).to_s + send(self.class.authentication_options[:salt_field]).to_s))
           end
         end
         
         def password_required?
-          send(self.class.hashed_password_field).blank? || !send(self.class.password_field).blank?
+          send(self.class.authentication_options[:hashed_password_field]).blank? || !send(self.class.authentication_options[:password_field]).blank?
         end
     end
   end
