@@ -1,6 +1,7 @@
 2009-01-09 - Sean Huber (shuber@huberry.com)
   * Add authentication_options cattr_accessor
   * Update README
+  * Add authentication_options cattr_accessor to models as well
 
 2009-01-08 - Sean Huber (shuber@huberry.com)
   * Clean up CHANGELOG
